--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,20 +1,8 @@
 name: codr
-description: A new Flutter project.
+description: An app made by Akhil Ramidi
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none"
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
@@ -24,94 +12,48 @@ dependencies:
   flutter:
     sdk: flutter
 
+  # Authorization
+  google_sign_in: "^4.5.1"
+  flutter_facebook_auth: ^2.0.0+1
+  sign_in_with_apple: ^2.5.2
+  github_sign_in: ^0.0.1
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # Firebase
+  firebase_core: ^0.5.3
+  cloud_firestore: ^0.14.3
+  firebase_auth: ^0.18.4+1
+  firebase_analytics: ^6.2.0
+  firebase_crashlytics: ^0.2.3
+  firebase_performance: ^0.4.2
+
+  # Miscellaneous
+  rxdart: ^0.24.1
+  font_awesome_flutter: ^8.10.0
+  flutter_chips_input: ^1.9.5
+  crypto: ^2.1.5
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_chips_input: ^1.9.5
-  persistent_bottom_nav_bar: ^3.1.0
 
-  firebase_core: ^0.5.2
-
-  # Database
-  cloud_firestore: ^0.14.3
-
-  # User Auth
-  firebase_auth: ^0.18.3
-  google_sign_in: ^4.5.6
-
-  # Analytics
-  firebase_analytics: ^6.2.0
-
-  # Crashlytics
-  firebase_crashlytics: ^0.2.3
-
-  # Performance
-  firebase_performance: ^0.4.2
-
-  rxdart: ^0.24.1
-  provider: ^4.3.2+2
-  font_awesome_flutter: ^8.10.0
-  
-
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
   fonts:
-      - family: Muli
-        fonts:
-          - asset: assets/Muli.ttf
-          - asset: assets/Muli-Bold.ttf
-            weight: 700
-          - asset: assets/Muli-SemiBold.ttf
-            weight: 600
-      - family: AdobeClean
-        fonts:
-          - asset: assets/AdobeClean-Regular.ttf
-      - family: NotoSans
-        fonts:
-          - asset: assets/NotoSans-Bold.ttf
+    - family: Muli
+      fonts:
+        - asset: assets/Muli.ttf
+        - asset: assets/Muli-Bold.ttf
+          weight: 700
+        - asset: assets/Muli-SemiBold.ttf
+          weight: 600
+    - family: AdobeClean
+      fonts:
+        - asset: assets/AdobeClean-Regular.ttf
+    - family: NotoSans
+      fonts:
+        - asset: assets/NotoSans-Bold.ttf
   assets:
     - assets/Mediamodifier-Design-Template.png
     - assets/logo.png
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
+
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
