--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.akhilr.codr</string>
+	<string>com.puravdatta.codr</string>
 	<key>PROJECT_ID</key>
 	<string>codr-abb74</string>
 	<key>STORAGE_BUCKET</key>
